@@ -1,5 +1,6 @@
 0.07
  - Add information about module version for checks in doc.
+ - Deprecate check_language() subroutine.
 
 0.06 2024-04-03T17:32:05+02:00
  - Fix EXAMPLES in doc.
